Bug 336887: search bar Go button is way too wide, when toolbar icons are set to "Icons

--- a/mozilla/browser/themes/winstripe/browser/browser.css
+++ b/mozilla/browser/themes/winstripe/browser/browser.css
@@ -223,8 +223,7 @@ menuitem.bookmark-item {
   -moz-margin-end: 0px;
 }
 
-toolbar[mode="full"] .toolbarbutton-1,
-toolbar[mode="full"] .toolbarbutton-menubutton-button {
+toolbar[mode="full"] .toolbarbutton-1 {
   min-width: 57px;
 }
 
